# Costumy

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_2d.txt  requirements_docs.txt
.github/workflows/: docs.yml
costumy/bodies/: __init__.py  cmorph.py  smpl.py
costumy/classes/: __init__.py  body.py  design.py  line.py  panel.py  pattern.py  point.py  specification.py
costumy/data/examples/: _doc_Specification.json  _freesewing_example-settings.json
costumy/data/measurements_definitions/: cmorph_mb_female.json  cmorph_mb_male.json  mb-lab_human_male.json  smpl.json
costumy/data/measurements_sets/: Elanor.json  Ghislain.json  Joosh.json  Vanessa.json
costumy/data/schemas/: measurements_definitions.json  measurements_methods.json
costumy/designs/: __init__.py  aaron.py
costumy/measurer/: __init__.py  measure.py  methods.py
costumy/node/: cubic2quad_pipe.js  generate_pattern.mjs  package-lock.json  package.json
costumy/simulation/: __init__.py  prepare.py  simulate.py
costumy/tests/: test_classes.py  test_designs.py  test_simulation.py
costumy/utils/: blender_utils.py  functions.py
docs/: index.md  installation.md
docs/About/: licenses.md  limitations.md
docs/Dev/: bodies.md  designs.md  docs.md  measures.md  testing.md
docs/Python/: Body.md  Design.md  Panel.md  Pattern.md
docs/Usage/: Usage.md  examples.md
docs/assets/css/: code.css  python_api.css  tabs.css  text.css
docs/assets/examples/usage/: as_json.json
licences/: Freesewing  GarmentPattern
