[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "costumy"
version = "0.1.0"
description = "Prototype meant to convert clothing patterns into 3D garments"
dependencies = [
  "svg.path",
  "triangle ",
  "numpy",
  "bpy == 4.0",
  "matplotlib"
]

[tool.setuptools]
packages = ["costumy"]